Team data changes

--- a/assets/css/templatemo.css
+++ b/assets/css/templatemo.css
@@ -51,7 +51,7 @@ p, a {font-weight: 400;}
 #main_nav .nav-item .nav-link:hover {color: #fff;}
 /* Home */
 #index_banner {
-  background-image: url('./../img/vamsisir.JPG');
+  background-image: url('./../img/index1.jpg');
   background-position: center center; background-size: cover;
   height: 100%;
   min-height: 60vh;
@@ -159,7 +159,7 @@ p, a {font-weight: 400;}
 /* Work */
 /* Singel Work */
 #work_single_banner {
-  background-image: url('./../img/include.png');
+  background-image: url('./../img/index1.jpg');
   background-position: center center;
   background-size: cover;
   height: 100%;
