--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -16,8 +16,8 @@
   --bs-green: #198754;
   --bs-teal: #20c997;
   --bs-cyan: #0dcaf0;
-  --bs-white: #fff;
-  --bs-gray: #6c757d;
+  --bs-white: rgb(0, 0, 0);
+  --bs-gray: #000000;
   --bs-gray-dark: #343a40;
   --bs-primary: #4232c2;
   --bs-secondary: #6266ea;
