--- a/assets/css/templatemo.css
+++ b/assets/css/templatemo.css
@@ -31,7 +31,7 @@ p, a {font-weight: 400;}
   margin-left: -75px;
 }
 
-#main_nav .nav-item .nav-link:hover {color: #fff;}
+#main_nav .nav-item .nav-link:hover {color: rgb(59, 58, 58);}
 
 #index_banner {
   background-image: url('./../img/index1.jpg');
@@ -81,17 +81,19 @@ p, a {font-weight: 400;}
 }
 
 #work_banner {
-  background-image: url('./../img/award.jpeg');
+  background-image: url('./../img/Picture\ 1.jpg');
   background-position: center center; background-size: cover;
-  height: 100%;
-  width: 100%;
+  height: 80%;
+  width: 40%;
 }
 
 #work_banner1 {
   background-image: url('./../img/election.jpg');
-  background-position: center center; background-size: contain;
-  height: 100%;
+  background-position:  center; 
+  background-size: cover;
+  height: 800px;
   width: 100%;
+  padding-bottom: 50px;
 }
 .progress {
   height: 8px;
@@ -133,6 +135,6 @@ p, a {font-weight: 400;}
 }
 
 footer a.text-light:hover {
-  color: #bfbfbf !important;
+  color: #111111 !important;
   transition-duration: 0.15s;
 }
